--- a/assets/Style.css
+++ b/assets/Style.css
@@ -1,16 +1,121 @@
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px;
-  }
-  
-  
-  .column {
-    flex: 50%;
-    padding: 0 4px;
-  }
-  
-  .column img {
-    margin-top: 8px;
-    vertical-align: middle;
+body{
+  background-image: url("assets/images/concrete_seamless.png");
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 34px;
+}
+
+.container{
+  max-width: 960px;
+}
+
+.containerContent {
+  margin: 120px auto;
+  box-sizing: border-box;    
+  border-style: solid;
+  border-color: #dddddd;
+  border-width: thin;
+  padding: 30px;
+}
+
+.navbar-light .navbar-brand{
+  color: #ffffff;
+  font-family: 'Georgia', Times New Roman, Times, serif;
+}
+
+.navbar-brand{
+  float: left;
+  width: 250px;
+  height: 90px;
+  font-size: 30px;
+  line-height: 90px;
+  text-align: center;
+  text-decoration: none;
+  background: #4aaaa5;
+  margin-left: 250px;
+
+}
+.collapse {
+  justify-content: flex-end;
+  margin-right: 250px;
+}
+
+.navbar,
+.navbar-expand-lg bg-light{
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 0px;
+  z-index: 99;
+  width: 100%;
+  border-bottom: 2px solid #cccccc;
+}
+
+h1 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 700;
+  color: #4aaaa5;
+  border-bottom: 3px solid #dddddd;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+
+p {
+  font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
+  color: #777777;
+}
+
+
+.card-img, 
+.card-img-overlay, 
+.card {
+  float: left;
+  width: 274px;
+  overflow: auto;
+  border: 0 none;
+  padding: 0;
+
+}
+
+.card-img:nth-child(even), 
+.card-img-overlay:nth-child(even), 
+.card:nth-child(even) {
+  margin-right: 40px;
+}
+
+.card-img, 
+.card-img-overlay, 
+.card img {
+  width: 100%;
+  border: 0 none;
+  opacity: 0.8;
+  margin-bottom: 40px;
+}
+
+h3.card-title {
+  text-align: center;
+  color: #ffffff;
+  background: #4aaaa5;
+  position: absolute;
+bottom: 20px;
+width: 100%;
+padding: 15px;
+}
+
+footer {
+  padding: 30px 0;
+  clear: both;
+  font-size: 12px;
+  color: #ffffff;
+  color: #cccccc;
+  text-align: center;
+  background: #666666;
+  border-top: 8px solid #4aaaa5;
+  height: 50px;
+}
+
+.clearfix:after {
+    display: block;
+    content: "";
+    clear: both;
   }
